# dbs.thb.io

./: README.md  index.html  package-lock.json  package.json  shipit  vite.config.js  webpack.config.js
backend/: .gitignore  Dockerfile  nuke-migrations  pyproject.toml  reload-data
backend/assets/: NEXT_PACK.psd  RM.psd  SYS.psd  YM.psd  monologo.psd
backend/dbs/: __init__.py  asgi.py  graphql.py  quirks.py  settings.py  urls.py  wsgi.py
backend/dbs-img/: logo.psd
backend/game/: admin.py  apps.py  models.py  schema.py
backend/game/fixtures/: game-build.yaml  game-card.yaml  game-character.yaml  game-collection.yaml  game-other.yaml  game-others.yaml  game-spellcard.yaml
backend/game/migrations/: 0001_initial.py  0002_remove_version_episode_episode_versions.py  0002_spellcard_lsc.py
backend/legacy/: migrate.py
backend/legacy/data/: attributes.yaml  cards.loader.json  cards.yaml.legacy  characters.yaml  episodes.yaml
backend/legacy/data/cards/: Carddata-C001-RM.yaml  Carddata-C002-MS.yaml  Carddata-C003-SK.yaml  Carddata-C004-YM.yaml  Carddata-C005-YK.yaml  Carddata-C006-ALC.yaml  Carddata-C007-REM.yaml  Carddata-C008-UU.yaml  Carddata-C009-RS.yaml  Carddata-C010-KGY.yaml  Carddata-C011-KN.yaml  Carddata-C012-MK.yaml  Carddata-C013-ERN.yaml  Carddata-C014-MQ.yaml  Carddata-C015-FLD.yaml  (+9 more)
backend/page/: admin.py  apps.py  models.py  schema.py  views.py
backend/page/fixtures/: page.yaml
backend/page/migrations/: 0001_initial.py  0002_remove_infoblock_content_remove_infoblockbutton_icon_and_more.py
backend/scripts/: E1.csv  EP03.csv  import_csv.py
(+149 files in other folders)
