[tool.poetry]
name = "dbs"
version = "0.1.0"
description = ""
authors = ["Proton <feisuzhu@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
graphene-django = "^3.0.0"
pillow = "^9.3.0"
django-model-utils = "^4.3.1"
martor = "^1.6.18"
django = "^4.1.7"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
